--- a/foundry.toml
+++ b/foundry.toml
@@ -25,7 +25,8 @@ remappings = [
   "@uniswap/v4-core/=lib/v4-core/",
   "@v4-periphery/=lib/v4-periphery/",
   "forge-std/=lib/v4-core/lib/forge-std/src/",
-  "@universal-router/=lib/universal-router/contracts/"
+  "@universal-router/=lib/universal-router/contracts/",
+  "@hookmate/=lib/hookmate/src/"
 ]
 
 [fmt]
