--- a/foundry.toml
+++ b/foundry.toml
@@ -17,15 +17,16 @@ compilation_restrictions = [
 ]
 
 remappings = [
-  "@v4=lib/v4-core/",
   "@solady=lib/solady/",
-  "@permit2=lib/permit2/src/",
-  "@forge=lib/forge-std/src/",
+  "@forge-std/=lib/forge-std/src/",
+  "@forge-gas-snapshot/=lib/forge-gas-snapshot/src/",
   "@uniswap/v4-core/=lib/v4-core/",
+  "@v4/=lib/v4-core/",
+  "v4-core/=lib/v4-core/",
   "@v4-periphery/=lib/v4-periphery/",
-  "forge-std/=lib/v4-core/lib/forge-std/src/",
+  "@permit2=lib/permit2/src/",
+  "lib/permit2/test:openzeppelin-contracts/contracts/=lib/permit2/lib/openzeppelin-contracts/contracts/",
   "@universal-router/=lib/universal-router/contracts/",
-  "@hookmate/=lib/hookmate/src/"
 ]
 
 [fmt]
